--- a/mlefrontend/public/index.html
+++ b/mlefrontend/public/index.html
@@ -80,20 +80,20 @@
 		<!-- CSS  -->
 		<!-- Bootstrap CSS
 		============================================ -->
-		<link rel="stylesheet" href="css1/bootstrap.min.css">
+		<!-- <link rel="stylesheet" href="css1/bootstrap.min.css"> -->
 		
 		<!-- font-awesome CSS
 		============================================ -->
-        <link rel="stylesheet" href="css1/font-awesome.min.css">
+        <!-- <link rel="stylesheet" href="css1/font-awesome.min.css"> -->
 		
 		<!-- owl.carousel CSS
 		============================================ -->
-        <link rel="stylesheet" href="css1/owl.carousel.css">
-        <link rel="stylesheet" href="css1/owl.theme.css">
+        <!-- <link rel="stylesheet" href="css1/owl.carousel.css">
+        <link rel="stylesheet" href="css1/owl.theme.css"> -->
 		
 		<!-- animate CSS
 		============================================ -->
-        <link rel="stylesheet" href="css1/animate.css">
+        <!-- <link rel="stylesheet" href="css1/animate.css"> -->
 		
 		<!-- main CSS
 		============================================ -->		
@@ -101,11 +101,11 @@
 		
 		<!-- responsive CSS
 		============================================ -->		
-        <link rel="stylesheet" href="css1/responsive.css">
+        <!-- <link rel="stylesheet" href="css1/responsive.css"> -->
 		
 		<!-- prettyPhoto CSS
 		============================================ -->		
-        <link rel="stylesheet" href="css1/prettyPhoto.css">
+        <!-- <link rel="stylesheet" href="css1/prettyPhoto.css"> -->
 		
 		<!-- modernizr js
 		============================================ -->		
