--- a/mlefrontend/public/index.html
+++ b/mlefrontend/public/index.html
@@ -5,78 +5,120 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+
+    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico" />
     <!-- Google Fonts
 		============================================ -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700,900"
+      rel="stylesheet"
+    />
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+    ></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
     <!-- Bootstrap CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <!-- Bootstrap CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-	<!-- nalika Icon CSS
+    <link rel="stylesheet" href="/css/font-awesome.min.css" />
+    <!-- nalika Icon CSS
 		============================================ -->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/css/nalika-icon.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/css/nalika-icon.css" />
     <!-- owl.carousel CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/owl.carousel.css">
-    <link rel="stylesheet" href="/css/owl.theme.css">
-    <link rel="stylesheet" href="/css/owl.transitions.css">
+    <link rel="stylesheet" href="/css/owl.carousel.css" />
+    <link rel="stylesheet" href="/css/owl.theme.css" />
+    <link rel="stylesheet" href="/css/owl.transitions.css" />
     <!-- animate CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/css/animate.css" />
     <!-- normalize CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/normalize.css" />
     <!-- meanmenu icon CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/meanmenu.min.css">
+    <link rel="stylesheet" href="/css/meanmenu.min.css" />
     <!-- main CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/main.css" />
     <!-- morrisjs CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/morrisjs/morris.css">
+    <link rel="stylesheet" href="/css/morrisjs/morris.css" />
     <!-- mCustomScrollbar CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/scrollbar/jquery.mCustomScrollbar.min.css">
+    <link
+      rel="stylesheet"
+      href="/css/scrollbar/jquery.mCustomScrollbar.min.css"
+    />
     <!-- metisMenu CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/metisMenu/metisMenu.min.css">
-    <link rel="stylesheet" href="/css/metisMenu/metisMenu-vertical.css">
+    <link rel="stylesheet" href="/css/metisMenu/metisMenu.min.css" />
+    <link rel="stylesheet" href="/css/metisMenu/metisMenu-vertical.css" />
     <!-- calendar CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/calendar/fullcalendar.min.css">
-    <link rel="stylesheet" href="/css/calendar/fullcalendar.print.min.css">
+    <link rel="stylesheet" href="/css/calendar/fullcalendar.min.css" />
+    <link rel="stylesheet" href="/css/calendar/fullcalendar.print.min.css" />
     <!-- style CSS
 		============================================ -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style.css" />
     <!-- responsive CSS
 		============================================ -->
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/responsive.css" />
     <!-- modernizr JS
 		============================================ -->
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
-    <link rel="icon" href="/assets/img/brand/favicon.png" type="image/png"><!-- Font Awesome -->
-    <link rel="stylesheet" href="/assets/libs/@fortawesome/fontawesome-free/css/all.min.css">
+    <link
+      href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="http://fonts.googleapis.com/css?family=Raleway:400,300,700"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="icon" href="/assets/img/brand/favicon.png" type="image/png" />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="/assets/libs/@fortawesome/fontawesome-free/css/all.min.css"
+    />
     <!-- Quick CSS -->
-    <link rel="stylesheet" href="/assets/css/quick-website.css" id="stylesheet">	
-        <script src="/js/modernizr.js"></script>
+    <link
+      rel="stylesheet"
+      href="/assets/css/quick-website.css"
+      id="stylesheet"
+    />
+    <script src="/js/modernizr.js"></script>
     <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
     <title>JLE Megamart | Super Market</title>
   </head>
@@ -85,70 +127,70 @@
     <div id="root"></div>
   </body>
 
-   <!-- jquery
+  <!-- jquery
 		============================================ -->
-    <script src="/js/vendor/jquery-1.12.4.min.js"></script>
-    <!-- bootstrap JS
+  <script src="/js/vendor/jquery-1.12.4.min.js"></script>
+  <!-- bootstrap JS
 		============================================ -->
-    <script src="/js/bootstrap.min.js"></script>
-    <!-- wow JS
+  <script src="/js/bootstrap.min.js"></script>
+  <!-- wow JS
 		============================================ -->
-    <script src="/js/wow.min.js"></script>
-    <!-- price-slider JS
+  <script src="/js/wow.min.js"></script>
+  <!-- price-slider JS
 		============================================ -->
-    <script src="/js/jquery-price-slider.js"></script>
-    <!-- meanmenu JS
+  <script src="/js/jquery-price-slider.js"></script>
+  <!-- meanmenu JS
 		============================================ -->
-    <script src="/js/jquery.meanmenu.js"></script>
-    <!-- owl.carousel JS
+  <script src="/js/jquery.meanmenu.js"></script>
+  <!-- owl.carousel JS
 		============================================ -->
-    <script src="/js/owl.carousel.min.js"></script>
-    <!-- sticky JS
+  <script src="/js/owl.carousel.min.js"></script>
+  <!-- sticky JS
 		============================================ -->
-    <script src="/js/jquery.sticky.js"></script>
-    <!-- scrollUp JS
+  <script src="/js/jquery.sticky.js"></script>
+  <!-- scrollUp JS
 		============================================ -->
-    <script src="/js/jquery.scrollUp.min.js"></script>
-    <!-- mCustomScrollbar JS
+  <script src="/js/jquery.scrollUp.min.js"></script>
+  <!-- mCustomScrollbar JS
 		============================================ -->
-    <script src="/js/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="/js/scrollbar/mCustomScrollbar-active.js"></script>
-    <!-- metisMenu JS
+  <script src="/js/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+  <script src="/js/scrollbar/mCustomScrollbar-active.js"></script>
+  <!-- metisMenu JS
 		============================================ -->
-    <script src="/js/metisMenu/metisMenu.min.js"></script>
-    <script src="/js/metisMenu/metisMenu-active.js"></script>
-    <!-- sparkline JS
+  <script src="/js/metisMenu/metisMenu.min.js"></script>
+  <script src="/js/metisMenu/metisMenu-active.js"></script>
+  <!-- sparkline JS
 		============================================ -->
-    <script src="/js/sparkline/jquery.sparkline.min.js"></script>
-    <script src="/js/sparkline/jquery.charts-sparkline.js"></script>
-    <!-- calendar JS
+  <script src="/js/sparkline/jquery.sparkline.min.js"></script>
+  <script src="/js/sparkline/jquery.charts-sparkline.js"></script>
+  <!-- calendar JS
 		============================================ -->
-    <script src="/js/calendar/moment.min.js"></script>
-    <script src="/js/calendar/fullcalendar.min.js"></script>
-    <script src="/js/calendar/fullcalendar-active.js"></script>
-	<!-- float JS
+  <script src="/js/calendar/moment.min.js"></script>
+  <script src="/js/calendar/fullcalendar.min.js"></script>
+  <script src="/js/calendar/fullcalendar-active.js"></script>
+  <!-- float JS
 		============================================ -->
-    <script src="/js/flot/jquery.flot.js"></script>
-    <script src="/js/flot/jquery.flot.resize.js"></script>
-    <script src="/js/flot/curvedLines.js"></script>
-    <script src="/js/flot/flot-active.js"></script>
-    <!-- plugins JS
+  <script src="/js/flot/jquery.flot.js"></script>
+  <script src="/js/flot/jquery.flot.resize.js"></script>
+  <script src="/js/flot/curvedLines.js"></script>
+  <script src="/js/flot/flot-active.js"></script>
+  <!-- plugins JS
 		============================================ -->
-    <script src="/js/plugins.js"></script>
-    <!-- main JS
+  <script src="/js/plugins.js"></script>
+  <!-- main JS
 		============================================ -->
-    <!-- <script src="/js/main.js"></script>
+  <!-- <script src="/js/main.js"></script>
     <script src="/assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/libs/svg-injector/dist/svg-injector.min.js"></script>
     <script src="/assets/libs/feather-icons/dist/feather.min.js"></script> -->
-    <!-- Quick JS -->
-    <script src="/assets/js/quick-website.js"></script>
-    
-    <script>
-        feather.replace({
-            'width': '1em',
-            'height': '1em'
-        })
-    </script>
+  <!-- Quick JS -->
+  <script src="/assets/js/quick-website.js"></script>
+
+  <script>
+    feather.replace({
+      width: "1em",
+      height: "1em",
+    });
+  </script>
 </html>
