--- a/mlefrontend/public/index.html
+++ b/mlefrontend/public/index.html
@@ -5,7 +5,23 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script>
+      $(".carousel.carousel-multi-item.v-2 .carousel-item").each(function () {
+        var next = $(this).next();
+        if (!next.length) {
+          next = $(this).siblings(":first");
+        }
+        next.children(":first-child").clone().appendTo($(this));
 
+        for (var i = 0; i < 3; i++) {
+          next = next.next();
+          if (!next.length) {
+            next = $(this).siblings(":first");
+          }
+          next.children(":first-child").clone().appendTo($(this));
+        }
+      });
+    </script>
     <meta
       name="description"
       content="Web site created using create-react-app"
