--- a/mlefrontend/public/index.html
+++ b/mlefrontend/public/index.html
@@ -136,6 +136,7 @@
     />
     <script src="/js/modernizr.js"></script>
     <script src="/js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="https://sdk.cashfree.com/js/ui/1.0.26/dropinClient.sandbox.js"></script>
     <title>JLE Megamart | Super Market</title>
   </head>
   <body>
